Revert "Fixes movie page grid layout to be maximal and aligned correctly"

--- a/src/app/pie-chart/pie-chart.component.css
+++ b/src/app/pie-chart/pie-chart.component.css
@@ -1,4 +1,3 @@
-div.pie-chart {
-    margin: auto;
-    padding: auto;
+#pie-chart {
+    margin: 2rem;
 }
